[gd_scene load_steps=5 format=3 uid="uid://d16tla866jega"]

[ext_resource type="Script" uid="uid://dv1xrrqwjhlpe" path="res://morning_routine_quests/quest_board/quest_paper_overview.gd" id="1_q2ukv"]
[ext_resource type="Texture2D" uid="uid://benjnccudrfbm" path="res://morning_routine_quests/assets/Shower_card.png" id="2_lq3ec"]
[ext_resource type="Texture2D" uid="uid://cx2ohjekv6jwl" path="res://morning_routine_quests/assets/icon3.png" id="3_lq3ec"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lq3ec"]

[node name="QuestPaperOverview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_q2ukv")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
custom_minimum_size = Vector2(100, 100)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
ratio = 0.6667

[node name="ColorRect" type="ColorRect" parent="AspectRatioContainer"]
layout_mode = 2
color = Color(0.88775, 0.757639, 0.584927, 1)

[node name="QuestIcon" type="TextureRect" parent="AspectRatioContainer"]
texture_filter = 1
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_lq3ec")
stretch_mode = 5

[node name="ZoomInButton" type="Button" parent="AspectRatioContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_lq3ec")

[node name="PanelContainer" type="PanelContainer" parent="AspectRatioContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="CompleteQuestButton" type="Button" parent="AspectRatioContainer/PanelContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
icon = ExtResource("3_lq3ec")
icon_alignment = 1
expand_icon = true

[node name="ColorRect2" type="ColorRect" parent="AspectRatioContainer"]
visible = false
layout_mode = 2
color = Color(0.631373, 0.0392157, 0, 0.192157)

[connection signal="pressed" from="AspectRatioContainer/ZoomInButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/ZoomInButton" to="." method="_on_zoom_in_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/PanelContainer/CompleteQuestButton" to="." method="_on_complete_quest_button_pressed"]
